--- a/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
@@ -29,7 +29,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input type="text" name="NumRelato" id="NumRelato" value="@Model.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
+                                <input type="text" name="NumRelato" id="NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
                             </div>
                         </div>
                     </div>
@@ -41,15 +41,13 @@
                                     <i class="fa fa-calendar"></i>
                                 </span>
 
-                                <input id="DtOcorrenciaInicio" name="DtOcorrenciaInicio"
-                                       value="@Model.DtOcorrenciaInicio"
+                                <input id="DtStart" name="DtStart" 
                                        title="Por favor informe a data início da ocorrência."
                                        style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
                                        placeholder="Data início do período" class="form-control startdate">
                                 <span class="input-group-addon">até</span>
-                                <input id="DtOcorrenciaFim" name="DtOcorrenciaFim"
-                                       value="@Model.DtOcorrenciaFim"
+                                <input id="DtEnd" name="DtEnd" 
                                        title="Por favor informe a data fim da ocorrência."
                                        style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
@@ -69,33 +67,19 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Empresa<span class="required">*</span></label>
-                        <div class="col-lg-7">
-                            <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
-                                    title="Por favor selecione uma empresa." required
-                                    asp-for="CodEmpresa"
-                                    asp-items="Model.ListEmpresa">
-                                <option value="">Selecionar uma empresa</option>
-                            </select>
-                        </div>
-                        <div class="col-sm-2">
-                            <button class="btn  btn-primary pull-left mr-2" v-on:click="GetListRelato()">Pesquisar &nbsp;&nbsp;<i class="fa fa-search"></i></button>
-                        </div>
-                    </div>
 
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico<span class="required">*</span></label>
                         <div class="col-lg-7">
                             <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
-                                    title="Por favor selecione um responsável." required
+                                    title="Por favor selecione uma responsável." required
                                     asp-for="CodResponsavel"
                                     asp-items="Model.ListResponsavel">
-                                <option value="">Selecionar um responsável</option>
+                                <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
                         <div class="col-sm-2">
-                            <button class="btn  btn-primary pull-left mr-2" v-on:click="GetListRelato()">Pesquisar &nbsp;&nbsp;<i class="fa fa-search"></i></button>
+                            <button class="btn  btn-primary pull-left mr-2"  v-on:click="GetListRelato()">Pesquisar &nbsp;&nbsp;<i class="fa fa-search"></i></button>
                         </div>
                     </div>
 
@@ -167,7 +151,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.ListRelato.aaData)
+                                    @*@foreach (var item in Model.ListRelato.aaData)
                                     {
                                         <tr>
                                             <td>@Html.DisplayFor(modelItem => item.NumRelato)</td>
@@ -197,7 +181,7 @@
                                                    class="on-default edit-row color" style='color:#777777'><i class="fa fa-users"></i></a>
                                             </td>
                                         </tr>
-                                    }
+                                    }*@
                                 </tbody>
                             </table>
 
