--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -159,28 +159,29 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável técnico<span class="required">*</span></label>
                         <div class="col-lg-7">
-                            @{
-                                var userRole = ((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value;
+                            @*@{
+                                    var userRole = ((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value;
 
-                                var requirement = new UserInRoleRequirement(userRole);
+                                    var requirement = new UserInRoleRequirement(userRole);
 
-                            }
-                            @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
-                            {
-                                <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
-                                        title="Por favor selecione uma empresa." required multiple
-                                        asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
-                                    <option value="">Selecionar Responsável técnico</option>
-                                </select>
-                            }
-                            else
-                            {
-                                <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
-                                        title="Por favor selecione uma empresa." required
-                                        asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
-                                    <option value="">Selecionar Responsável técnico</option>
-                                </select>
-                            }
+                                }
+                                @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
+                                {
+                                    <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                                            title="Por favor selecione uma empresa." required multiple
+                                            asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
+                                        <option value="">Selecionar Responsável técnico</option>
+                                    </select>
+                                }
+                                else
+                                {
+
+                                }*@
+                            <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                                    title="Por favor selecione uma empresa." required
+                                    asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
+                                <option value="">Selecionar Responsável técnico</option>
+                            </select>
 
                         </div>
                         <div class="col-lg-2">
@@ -253,13 +254,14 @@
 </div>
 @section CssSpecificVendor {
     <link rel="stylesheet" href="~/vendor/datatables/media/css/dataTables.bootstrap4.css" />
-    <link rel="stylesheet" href="vendor/pnotify/pnotify.custom.css" />
+    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
+    <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/vendor/pnotify/pnotify.custom.js"></script>
-    <script src="~/js/empresa.js"></script>
+    <script src="~/vendor/select2/js/select2.js"></script>
+    <script src="~/js/atribuir.js"></script>
 
     <script>
         // Tooltip
