--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -184,13 +184,13 @@
 
                         </div>
                         <div class="col-lg-2">
-                            <a href="#" id="custom-icon-success" class="btn  btn-primary pull-left mr-2">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
+                            <a href="#" id="custom-icon-success" class="btn  btn-primary pull-left mr-2" v-on:click="AddResponsavel">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
-                            <table id="responsaveisDatatable" class="table table-responsive-md table-striped mb-0">
+                            <table id="datatable-default" class="table table-responsive-md table-striped mb-0">
                                 <thead>
                                     <tr>
                                         <th>Empresa de atendimento</th>
@@ -199,13 +199,15 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                @foreach (var item in @Model.ListResponsavelTecnico)
+                                {
                                     <tr>
-                                        <td>BInnovatiom</td>
-                                        <td>Uriel</td>
-                                        <td class="text-center">
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
+                                        <td>@item.Empresa.NomRazaoSocial</td>
+                                        <td>@item.NomResponsavelTecnico</td>
+                                        <td><a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Local" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a></td>
+
                                     </tr>
+                                }
                                 </tbody>
                             </table>
 
@@ -253,14 +255,11 @@
 </div>
 @section CssSpecificVendor {
     <link rel="stylesheet" href="~/vendor/datatables/media/css/dataTables.bootstrap4.css" />
-    <link rel="stylesheet" href="vendor/pnotify/pnotify.custom.css" />
 }
 @section Scripts {
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/vendor/pnotify/pnotify.custom.js"></script>
-    <script src="~/js/empresa.js"></script>
-
+    <script src="~/js/atribuir.js"></script>
     <script>
         // Tooltip
         (function ($) {
