Rn0101, validaçao de campos nao informados, alteracao da tabela de responsavel tecnico

--- a/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
@@ -21,7 +21,7 @@
                 </header>
                 <div class="card-body">
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome da unidade de infraestrutura </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome da unidade de infraestrutura  <span class="required">*</span></label>
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
                                     title="Por favor selecione uma unidade de infraestrutura." required
@@ -35,8 +35,8 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscLocal" class="form-control" 
-                                      placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências" 
-                                      title="eg.: Descrição do  sub assunto relacionado as  ocorrências" 
+                                      placeholder="eg.: Nome do local da ocorrência cadastrado" 
+                                      title="Por favor informe o nome do local da ocorrência cadastrado" 
                                       required maxlength="255"></textarea>
                         </div>
                         <label class="col-sm-3 control-label text-sm-right pt-2"></label>
