--- a/Infraero.Relprev.WebUi/Views/SubAssunto/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubAssunto/Edit.cshtml
@@ -35,7 +35,7 @@
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" 
                                       placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  "
-                                      Title="eg.: Descrição do  sub assunto relacionado as  ocorrências  " 
+                                      placeholder="Por favor informe a descrição do  sub assunto relacionado as  ocorrências"
                                       required maxlength="255">@Model.SubAssunto.DscSubAssunto</textarea>
                         </div>
                     </div>
