--- a/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
@@ -19,7 +19,7 @@
                 </header>
                 <div class="card-body">
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome do Perfil </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome do Perfil <span class="required">*</span></label>
                         <div class="col-lg-9">
                             <input type="text" name="NomPerfil" class="form-control" placeholder="eg.: Nome do Perfil" title="Por favor informe Nome do Perfil" required />
 
