--- a/Infraero.Relprev.WebUi/Views/Perfil/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Edit.cshtml
@@ -25,7 +25,7 @@
                 </header>
                 <div class="card-body">
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome do Perfil </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome do Perfil <span class="required">*</span></label>
                         <div class="col-lg-9">
                             @if (Model.Perfil.NomPerfil == UserRoles.Administrator)
                             {
