--- a/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
@@ -36,7 +36,7 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" 
-                                      placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências"
+                                      placeholder="Por favor informe a descrição do  sub assunto relacionado as  ocorrências"
                                       title="eg.: Descrição do  sub assunto relacionado as  ocorrências"
                                       required maxlength="50"></textarea>
                         </div>
