Cadastro relato - ok

--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -204,8 +204,8 @@
                                 {
                                     <tr>
                                         <td>@item.CodEmpresa</td>
-                                        <td>@item.NomUsuario</td>
-                                        <td><a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Local" asp-route-id="@item.CodUsuario" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a></td>
+                                        <td>@item.NomResponsavelTecnico</td>
+                                        <td><a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Local" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a></td>
 
                                     </tr>
                                 }
