--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -112,101 +112,15 @@
     </div>
 </div>
 @section CssSpecificVendor {
-   @* <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />*@
+    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
     <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
+    <script src="~/js/usuario.js"></script>
     <script>
-
-        (function ($) {
-
-            'use strict';
-
-            var $select = $(".select2").select2({
-                allowClear: true
-            });
-
-            $(".select2").each(function () {
-                var $this = $(this),
-                    opts = {};
-
-                var pluginOptions = $this.data('plugin-options');
-                if (pluginOptions)
-                    opts = pluginOptions;
-
-                $this.themePluginSelect2(opts);
-            });
-
-            /*
-             * When you change the value the select via select2, it triggers
-             * a 'change' event, but the jquery validation plugin
-             * only re-validates on 'blur'*/
-
-            $select.on('change', function () {
-                $(this).trigger('blur');
-            });
-
-            $("#ddlEmpresa").change(function () {
-
-                var url = "GetUnidadeByIdEmpresa";
-
-                var ddlSource = "#ddlEmpresa";
-
-                $.getJSON(url,
-                    { id: $(ddlSource).val() },
-                    function (data) {
-                        var items = '';
-                        $("#ddlUnidadeInfraestrutura").empty;
-                        $.each(data,
-                            function (i, row) {
-                                items += "<option value='" + row.value + "'>" + row.text + "</option>";
-                            });
-                        $("#ddlUnidadeInfraestrutura").html(items);
-                    });
-            });
-
-            var $numTel = $("#NumTelefone");
-            $numTel.mask('(00) 0000-0000');
-
-            $("#form").validate({
-                rules: {
-                    "EndEmail": {
-                        required: true,
-                        email: true
-                    },
-                    cpf: { cpf: true, required: true }
-                },
-                messages: {
-                    "EndEmail": {
-                        required: "Por favor informe o endereço eletrônico válido do responsável técnico.",
-                        email: "Formato de e-mail inválido."
-                    },
-                    cpf: { cpf: 'Formato de CPF inválido', required: "Por favor informe o número do CPF do responsável técnico." }
-                },
-                highlight: function (label) {
-                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
-                },
-                success: function (label) {
-                    $(label).closest('.form-group').removeClass('has-error');
-                    label.remove();
-                },
-                errorPlacement: function (error, element) {
-                    var placement = element.closest('.input-group');
-                    if (!placement.get(0)) {
-                        placement = element;
-                    }
-                    if (error.text() !== '') {
-                        placement.after(error);
-                    }
-                }
-            });
-
-
-        }).apply(this, [jQuery]);
-
         (function ($) {
             $('#ddlEmpresa').val(@Model.ResponsavelTecnico.CodEmpresa);
             $('#ddlEmpresa').trigger('change');
