--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "AtribuirRespRelato", FormMethod.Post, new { id = "form" }))
+        @using (@Html.BeginForm("Index", "AtribuirRespRelato", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -33,6 +33,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
+                                <input type="hidden" id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato">
                                 <input readonly id="CodNumRelato" name="CodNumRelato" value=" @Model.Relato.NumRelato" class="form-control" />
                             </div>
                         </div>
@@ -150,70 +151,64 @@
                     <br />
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa de atendimento<span class="required">*</span></label>
-                        <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
-                                title="Por favor selecione uma empresa." required
-                                asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
-                            <option value="">Selecionar Empresa</option>
-                        </select>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Responsável técnico<span class="required">*</span></label>
                         <div class="col-lg-7">
-                            @*@{
-                                    var userRole = ((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value;
-
-                                    var requirement = new UserInRoleRequirement(userRole);
-
-                                }
-                                @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
-                                {
-                                    <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
-                                            title="Por favor selecione uma empresa." required multiple
-                                            asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
-                                        <option value="">Selecionar Responsável técnico</option>
-                                    </select>
-                                }
-                                else
-                                {
-
-                                }*@
-                            <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                            <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
                                     title="Por favor selecione uma empresa." required
-                                    asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
-                                <option value="">Selecionar Responsável técnico</option>
+                                    asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
+                                <option value="">Selecionar Empresa</option>
                             </select>
-
-                        </div>
-                        <div class="col-lg-2">
-                            <a href="#" id="custom-icon-success" class="btn  btn-primary pull-left mr-2" v-on:click="AddResponsavel">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
                         </div>
                     </div>
+
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico<span class="required">*</span></label>
+                        <div class="col-lg-7">
+                            @*@if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
+            {
+                <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                        title="Por favor selecione uma empresa." required multiple
+                        asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
+                    <option value="">Selecionar Responsável técnico</option>
+                </select>
+            }
+            else
+            {
+
+            }*@
+                            <select class="form-control populate select2" id="ddlResponsavelTecnico"
+                                    name="ddlResponsavelTecnico[]" multiple="multiple"
+                                    title="Por favor selecione um responsável." required
+                                    asp-for="CodResponsavel"
+                                    asp-items="Model.ListResponsavel">
+                                <option value="">Selecionar um responsável</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-2">
+                            @*<button class="btn  btn-primary pull-left mr-2" v-on:click="GetListRelato()">Pesquisar &nbsp;&nbsp;<i class="fa fa-search"></i></button>*@
+                            <a href="#" class="btn  btn-primary pull-left mr-2" v-on:click="Adicionar">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
+                        </div>
+                        <input type="hidden" id="ListCodResponsavel" name="ListCodResponsavel">
+                    </div>
+
                     <div class="form-group row">
                         <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
-                            <table id="datatable-default" class="table table-responsive-md table-striped mb-0">
+                            <table id="datatable-default" name="datatable-default" class="table table-responsive-md table-striped mb-0">
                                 <thead>
                                     <tr>
+                                        <th>Cod Empresa de atendimento</th>
                                         <th>Empresa de atendimento</th>
+                                        <th>Cod Responsável técnico</th>
                                         <th>Responsável técnico</th>
                                         <th>Ações</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                @foreach (var item in @Model.ListResponsavelTecnico)
-                                {
-                                    <tr>
-                                        <td>@item.CodEmpresa</td>
-                                        <td>@item.NomResponsavelTecnico</td>
-                                        <td><a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Local" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a></td>
 
-                                    </tr>
-                                }
-                                </tbody>
                             </table>
 
                         </div>
                     </div>
+
                 </div>
                 <footer class="card-footer">
                     <div class="row justify-content-end">
@@ -229,37 +224,14 @@
         }
     </div>
 </div>
-<div id="modalIcon" class="modal-block modal-header-color modal-block-danger mfp-hide">
-    <section class="card">
-        <header class="card-header">
-            <h2 class="card-title">Exclusão</h2>
-        </header>
-        <div class="card-body">
-            <div class="modal-wrapper">
-                <div class="modal-icon">
-                    <i class="fa fa-question-circle"></i>
-                </div>
-                <div class="modal-text">
-                    <p class="mb-0">Tem certeza que deseja <b>excluir</b> esse registro?</p>
-                </div>
-            </div>
-        </div>
-        <footer class="card-footer">
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <button class="btn btn-success modal-confirm">Sim &nbsp;&nbsp;<i class="fa fa-thumbs-o-up"></i></button>
-                    <button class="btn btn-danger modal-dismiss">Não &nbsp;&nbsp;<i class="fa fa-thumbs-o-down"></i></button>
-                </div>
-            </div>
-        </footer>
-    </section>
-</div>
+
 @section CssSpecificVendor {
     <link rel="stylesheet" href="~/vendor/datatables/media/css/dataTables.bootstrap4.css" />
     <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
@@ -275,63 +247,11 @@
                 $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
             }
 
-        }).apply(this, [jQuery]);
-        /*
-Name: 			UI Elements / Modals - Examples
-Written by: 	Okler Themes - (http://www.okler.net)
-Theme Version: 	2.0.0
-*/
-
-        (function ($) {
-
-            'use strict';
-
-            /*
-            Basic
-            */
-            $('.modal-basic').magnificPopup({
-                type: 'inline',
-                preloader: false,
-                modal: true
-            });
-
-            /*
-            Sizes
-            */
-            $('.modal-sizes').magnificPopup({
-                type: 'inline',
-                preloader: false,
-                modal: true
-            });
-
-            /*
-            Modal Dismiss
-            */
-            $(document).on('click', '.modal-dismiss', function (e) {
-                e.preventDefault();
-                $.magnificPopup.close();
-            });
+            
 
         }).apply(this, [jQuery]);
-
-
-        $('#default-success').click(function () {
-            new PNotify({
-                title: 'Empresa',
-                text: 'Empresa adicionada com sucesso.',
-                type: 'success'
-            });
-        });
-
-
-        $('#custom-icon-success').click(function () {
-            new PNotify({
-                title: 'Atribuir Responsável',
-                text: 'Empresa adicionada com sucesso.',
-                type: 'success',
-                icon: 'fa fa-build'
-            });
-        });
+       
+        
 
     </script>
 }
