funcionalidade de adicionar responsavel

--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -184,7 +184,7 @@
                             </select>
                         </div>
                         <div class="col-sm-2">
-                            <button class="btn  btn-primary pull-left mr-2" form="form" type="submit" id="adicionar" v-on:click="Adicionar">Adicionar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                            <button class="btn  btn-primary pull-left mr-2" form="form" type="submit" id="adicionar" >Adicionar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
                         </div>
                         <input type="hidden" id="ListCodResponsavel" name="ListCodResponsavel">
                     </div>
