--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -202,7 +202,7 @@
                                         <td>@Html.DisplayFor(modelItem => item.ResponsavelTecnico.Empresa.NomRazaoSocial)</td>
                                         <td>@Html.DisplayFor(modelItem => item.ResponsavelTecnico.NomResponsavelTecnico)</td>
                                         <td class="actions">
-                                            <a data-toggle="tooltip" data-placement="top" title="Remover" asp-action="Delete" asp-controller="AtribuirRespRelato" asp-route-idRelato="@Model.Relato.CodRelato" asp-route-idEmpresa ="@item.CodEmpresa" asp-route-idResponsavel = "@item.CodResponsavel" class="on-default remove-row" style='color: #191C21'><i class="fa fa-trash"></i></a>
+                                            <a data-toggle="tooltip" data-placement="top" title="Remover" asp-action="Delete" asp-controller="AtribuirRespRelato" asp-route-idRelato="@Model.Relato.CodRelato" asp-route-idEmpresa ="@item.ResponsavelTecnico.CodEmpresa" asp-route-idResponsavel = "@item.ResponsavelTecnico.CodResponsavelTecnico" class="on-default remove-row" style='color: #191C21'><i class="fa fa-trash"></i></a>
                                         </td>
                                     </tr>
                                 }
